chore:week day 1

--- a/days1/index.html
+++ b/days1/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Biodata Diri</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,12 +34,13 @@
               <i class="fa-brands fa-twitter fa-2xl"></i>
           </div>
         </div>
-
-      <div class="card">
-        <img src="img/myfoto.jpg" class="profile-img">
-        <h2 class="name">TORIQ   ROSID</h2>
-        <p class="engineering">Fullstack Developer</p>
-      </div>
+      <section class="card">
+        <img src="img/myfoto.jpg" alt="card img" class="profile-img">
+        <div class="profile-info">
+          <h2>TORIQ ABDUL ROSYID</h2>
+          <p>Fullstack Developer</p>
+        </div>
+      </section>
     
   </div>
 </body>
