change: new day

--- a/task2/profile.html
+++ b/task2/profile.html
@@ -24,7 +24,7 @@
         </li>
       </div>
       <div class="right">
-        <a href="../days3/contact.html"><button>Contact Me</button></a>
+        <a href="../task3/contact.html"><button>Contact Me</button></a>
       </div>
     </ul>
 
@@ -34,13 +34,8 @@
       <div class="flex profile-info">
         <h2>Hi, Welcome To My Personal Data</h2>
         <p class="Data">
-          My name is Toriq, I am 21 years old, I am a graduate of vocational
-          high school majoring in computer network engineering. I have
-          contributed to the company Pasifik Satelit Nusantara (PSN), and
-          currently I am undergoing software engineering training at the
-          DumbWays bootcamp. Lorem ipsum dolor sit amet consectetur adipisicing
-          elit. Quo nesciunt similique blanditiis quia harum a unde tenetur
-          earum facere dignissimos omnis, consectetur, aspernatur quos ipsam
+          My name is Toriq, I am 21 years old, I am a graduate of vocational high school majoring in computer network engineering. I have contributed to the company Pasifik Satelit Nusantara (PSN), and currently I am undergoing software
+          engineering training at the DumbWays bootcamp. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo nesciunt similique blanditiis quia harum a unde tenetur earum facere dignissimos omnis, consectetur, aspernatur quos ipsam
           reprehenderit! Mollitia eos id voluptates!
         </p>
 
@@ -49,9 +44,7 @@
             <button class="item1">Contact</button>
           </li>
           <li>
-            <a class="item2" href="#">
-              download CV <i class="fa-solid fa-download"></i>
-            </a>
+            <a class="item2" href="#"> download CV <i class="fa-solid fa-download"></i> </a>
           </li>
         </ul>
 
@@ -64,7 +57,7 @@
       </div>
       <div class="flex box">
         <div class="card1">
-          <img src="img/photo_2025-05-01_19-15-48.jpg" class="img-top">
+          <img src="img/photo_2025-05-01_19-15-48.jpg" class="img-top" />
           <div class="card2">
             <h5 class="card-title">TORIQ ABDUL ROSYID</h5>
             <p class="card-text">Fullstack Developer</p>
