--- a/task3/contact.html
+++ b/task3/contact.html
@@ -12,14 +12,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-light shadow" style="background-color: #f9f7f7">
       <div class="container">
-        <a class="navbar-brand" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMD1R_e2MlTpAfs2XQKS-JBZuElrFIutiFOA&s"><img src="../days2/img/dumbways.png" alt="DumbWays" style="width: 60px" /></a>
+        <a class="navbar-brand" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRMD1R_e2MlTpAfs2XQKS-JBZuElrFIutiFOA&s"><img src="../task2/img/dumbways.png" alt="DumbWays" style="width: 60px" /></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item" style="background-color: #f9f7f7">
               <a class="nav-link home link-offset-5 fw-semibold fs-3" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item" style="background-color: #f9f7f7">
-              <a class="nav-link project fs-3" href="../days2/profile.html">My Project</a>
+              <a class="nav-link project fs-3" href="../task2/profile.html">My Project</a>
             </li>
           </ul>
           <div class="d-flex" role="search">
